test/libhyperion/syntaxTests/denominations/invalid_denomination_on_number.hyp
contract C {
	string s = 0x1234 ether;
}
// ----
// TypeError 5145: (25-37): Hexadecimal numbers cannot be used with unit denominations. You can use an expression of the form "0x1234 * 1 day" instead.
